--- a/project/ethicaSocial/home/templates/html/base.html
+++ b/project/ethicaSocial/home/templates/html/base.html
@@ -20,6 +20,7 @@
     <a href="{% url 'jobs'%}">job</a>
     <a href="{% url 'news'%}">news</a>
     <a href="{% url 'followersPost'%}">followers post</a>
+    <a href="{% url 'settings'%}">followers post</a>
     {% block content %}
 
 
