--- a/project/ethicaSocial/landing/templates/html/createAccount.html
+++ b/project/ethicaSocial/landing/templates/html/createAccount.html
@@ -10,12 +10,12 @@
 <a href="{% url 'login'%}">
     log in
 </a>
-<form method="post" action="{% url 'createAccountDb' %}">
+<form method="post" action="{% url 'createAccountDb' %}"style="text-align: center;">
 {% csrf_token %}
-    name<input type="text" name="name">
-    nid<input type="text" name="nid">
-    email<input type="email" name="email">
-    password<input type="password" name="password">
+    name<input type="text" name="name"><br><br>
+    nid<input type="text" name="nid"><br><br>
+    email<input type="email" name="email"><br><br>
+    password<input type="password" name="password"><br><br>
     <input type="submit" name="create">
 </form>
 
