--- a/project/ethicaSocial/landing/templates/html/login.html
+++ b/project/ethicaSocial/landing/templates/html/login.html
@@ -10,6 +10,9 @@
 <a href="{% url 'createAccount'%}">
     create account
 </a>
+<a href="{% url 'getEmail'%}">
+    forgot password?
+</a>
 <form method="post" action="{% url 'validateLogin' %}" style="text-align: center;">
 {% csrf_token %}
     email    <input type="email" name="email"><br>
