--- a/project/ethicaSocial/home/templates/html/showBasicInfo.html
+++ b/project/ethicaSocial/home/templates/html/showBasicInfo.html
@@ -9,6 +9,7 @@ city:<input type="text" name="city" value={{city}}><br>
 country:<input type="text" name="country" value={{country}}><br>
 email:<input type="email" name="email" value={{email}} required><br>
 blood group :<input type="text" name="bloodGroup" value={{bloodGroup}} required><br>
+bio :<input type="text" name="bio" value={{bio}}  ><br>
 <input type="submit" value="change" name="change" >
 <br>balance: {{balance}}<br>
 </form>
