sell data and notification added

--- a/project/ethicaSocial/home/templates/html/base.html
+++ b/project/ethicaSocial/home/templates/html/base.html
@@ -7953,6 +7953,7 @@
     <a href="{% url 'jobs'%}">job</a>
     <a href="{% url 'news'%}">news</a>
     <a href="{% url 'followersPost'%}">followers post</a>
+    <a href="{% url 'notification'%}">nottifications</a>
 </div>
 
 <div class="absolute">
