--- a/project/ethicaSocial/home/templates/html/settings.html
+++ b/project/ethicaSocial/home/templates/html/settings.html
@@ -3,4 +3,6 @@
 <form method ="get" action="{% url 'logout' %}">
     <input type="submit" name="logout" value="log out">
 </form>
+<a href="{% url 'buyData' %}" > buy Data</a>
+
 {% endblock content %}
